--- a/environment.yml
+++ b/environment.yml
@@ -40,6 +40,7 @@ dependencies:
       - backoff==2.2.1
       - bcrypt==4.3.0
       - beautifulsoup4==4.13.5
+      - bert-score==0.3.13
       - bleach==6.2.0
       - blinker==1.9.0
       - build==1.3.0
@@ -51,6 +52,8 @@ dependencies:
       - click==8.3.0
       - coloredlogs==15.0.1
       - comm==0.2.3
+      - contourpy==1.3.3
+      - cycler==0.12.1
       - dataclasses-json==0.6.7
       - debugpy==1.8.17
       - decorator==5.2.1
@@ -69,6 +72,7 @@ dependencies:
       - filelock==3.19.1
       - filetype==1.2.0
       - flatbuffers==25.2.10
+      - fonttools==4.60.1
       - fqdn==1.5.1
       - frozenlist==1.7.0
       - fsspec==2025.9.0
@@ -116,6 +120,7 @@ dependencies:
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.27.3
       - jupyterlab-widgets==3.0.15
+      - kiwisolver==1.4.9
       - kubernetes==33.1.0
       - langchain==0.3.27
       - langchain-chroma==0.2.5
@@ -136,6 +141,7 @@ dependencies:
       - marko==2.2.0
       - markupsafe==3.0.2
       - marshmallow==3.26.1
+      - matplotlib==3.10.6
       - matplotlib-inline==0.1.7
       - mdurl==0.1.2
       - mistune==3.1.4
@@ -196,6 +202,7 @@ dependencies:
       - pydeck==0.9.1
       - pygments==2.19.2
       - pylatexenc==2.10
+      - pyparsing==3.2.5
       - pypdfium2==4.30.0
       - pypika==0.48.9
       - pyproject-hooks==1.2.0
@@ -269,3 +276,4 @@ dependencies:
       - yarl==1.20.1
       - zipp==3.23.0
       - zstandard==0.25.0
+prefix: /Users/ajh/miniconda3/envs/coroner_env
